feat:: open api updates
